--- a/index.html
+++ b/index.html
@@ -3,9 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+  <title>Task_03.Добрый картон.Flex</title>
 </head>
 <body>
-  
+  <!-- Размещаю блок к карточками в секции Promo -->
+  <section class="promo">
+
+    <!-- Разделяю блок на 3 контейнера по количеству строк -->
+    <div class="promo-container">
+      <!-- Карточки с цифровой промо-информацией -->
+      <div class="promo-card digits">
+        <p class="digits-title">
+          5 лет
+        </p>
+        <p class="digits-text text">
+          На рынке изделий из гофрокартона
+        </p>
+      </div>
+
+      <div class="promo-card digits">
+        <p class="digits-title">
+          до 5 000 000 м2
+        </p>
+        <p class="digits-text text">
+          Ежемесячный объем производства гофрокартона
+        </p>
+      </div>
+
+      <div class="promo-card digits">
+        <p class="digits-title">
+          4 000 м2
+        </p>
+        <p class="digits-text text">
+          Площадь склада
+        </p>
+      </div>
+
+    </div>
+
+    <div class="promo-container">
+      <!-- 3 первых карточки с иконками  -->
+      <div class="promo-card card-icon">
+
+        <div class="card-icon-icon">
+          <img src="img/icon_01.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Производство
+          </p>
+          <p class="card-icon-text text">
+            4 технологические линии спо- собны выполнить любой заказ любой сложности
+          </p>
+        </div>
+
+      </div>
+
+      <div class="promo-card card-icon">
+
+        <div class="card-icon-icon">
+          <img src="img/icon_02.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Бесплатные образцы
+          </p>
+          <p class="card-icon-text text">
+            Бесплатно делаем образцы гофроупаковки - это помогает заранее увидеть упаковку
+          </p>
+        </div>
+
+      </div>
+
+      <div class="promo-card card-icon">
+        <!-- Последняя строка карточек с иконками -->
+        <div class="card-icon-icon">
+          <img src="img/icon_03.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Стабильное качество
+          </p>
+          <p class="card-icon-text text">
+            Собственная лаборатория кон- тролирует качество на каждом этапе производства
+          </p>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="promo-container">
+      <div class="promo-card card-icon">
+
+        <div class="card-icon-icon">
+          <img src="img/icon_04.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Страховой запас
+          </p>
+          <p class="card-icon-text text">
+            Можем хранить запас гофро- продукции на своих складах и поставлять его партиями
+          </p>
+        </div>
+
+      </div>
+
+      <div class="promo-card card-icon">
+
+        <div class="card-icon-icon">
+          <img src="img/icon_05.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Флексопечать
+          </p>
+          <p class="card-icon-text text">
+            Возможно нанесение вашего  логотипа, текста или мани- пуляционных знаков
+          </p>
+        </div>
+
+      </div>
+
+      <div class="promo-card card-icon">
+
+        <div class="card-icon-icon">
+          <img src="img/icon_06.png" alt="Иконка Производство">
+        </div>
+
+        <div class="card-icon-description">
+          <p class="card-icon-title">
+            Гидрофобные добавки
+          </p>
+          <p class="card-icon-text text">
+            На производстве реализована технология, которая позволяет гофрокартону стать прочнее
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>  
 </body>
 </html>
